# jogodavelha

./: pyproject.toml
jogoDaVelha/: config.py  main.py  stopwatch.py  ui.py
jogoDaVelha/config/: colors.toml  images.toml  window.toml
