[tool.poetry]
name = "jogodavelha"
version = "0.1.0"
description = ""
authors = ["MatheusLPolidoro <mattpolidoro4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
toml = "^0.10.2"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
blue = "^0.9.1"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
